change tagvisit (aka visit-tag-table) to immediately load the tag file
before it used to only record the path to the tag file which was loaded
on demand upon find-tag (M-.).  tagvisit did to do a stat + access dance
to know if the path was pointing to a regular, readable file and
loadtags (called lazily by find-tag) trusted those checks...

Instead, just load the tags in tagvisit and drop the lazy mechanics.

ok tb@

--- a/usr.bin/mg/mg.1
+++ b/usr.bin/mg/mg.1
@@ -1,7 +1,7 @@
-.\"	$OpenBSD: mg.1,v 1.127 2022/10/20 18:59:24 op Exp $
+.\"	$OpenBSD: mg.1,v 1.128 2023/03/29 07:29:17 op Exp $
 .\" This file is in the public domain.
 .\"
-.Dd $Mdocdate: October 20 2022 $
+.Dd $Mdocdate: March 29 2023 $
 .Dt MG 1
 .Os
 .Sh NAME
@@ -967,7 +967,7 @@ As it moves, convert any characters to upper case.
 Toggle the visible bell.
 If this toggle is on, the modeline will flash.
 .It visit-tags-table
-Record name of the tags file to be used for subsequent find-tag.
+Load tags file to be used for subsequent find-tag.
 .It what-cursor-position
 Display a bunch of useful information about the current location of
 dot.
