--- a/bin/csh/csh.1
+++ b/bin/csh/csh.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: csh.1,v 1.87 2023/03/30 16:00:47 op Exp $
+.\"	$OpenBSD: csh.1,v 1.88 2023/03/30 16:16:32 jmc Exp $
 .\"	$NetBSD: csh.1,v 1.10 1995/03/21 09:02:35 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
@@ -2709,7 +2709,7 @@ source of home directories for
 .Rs
 .\" 4.4BSD USD:4
 .%A W. Joy
-.%T An Introduction to the C shell
+.%T \&An Introduction to the C shell
 .Re
 .Sh HISTORY
 .Nm
