--- a/share/man/man4/pci.4
+++ b/share/man/man4/pci.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pci.4,v 1.396 2023/03/21 22:57:38 jmc Exp $
+.\"	$OpenBSD: pci.4,v 1.397 2023/03/31 02:20:21 kevlo Exp $
 .\"	$NetBSD: pci.4,v 1.29 2000/04/01 00:32:23 tsarna Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt.  All rights reserved.
@@ -31,7 +31,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: March 21 2023 $
+.Dd $Mdocdate: March 31 2023 $
 .Dt PCI 4
 .Os
 .Sh NAME
@@ -220,7 +220,7 @@ Sun Happy Meal 10/100 Ethernet device
 .It Xr iavf 4
 Intel Ethernet Adaptive Virtual Function device
 .It Xr igc 4
-Intel I225 1Gb/2.5Gb Ethernet device
+Intel I225/I226 1Gb/2.5Gb Ethernet device
 .It Xr ix 4
 Intel 82598/82599/X540/X550 PCI Express 100/1Gb/10Gb Ethernet device
 .It Xr ixgb 4
