Man page for ngbe(4).
ok miod@

--- a/share/man/man4/pci.4
+++ b/share/man/man4/pci.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pci.4,v 1.397 2023/03/31 02:20:21 kevlo Exp $
+.\"	$OpenBSD: pci.4,v 1.398 2023/03/31 08:20:58 kevlo Exp $
 .\"	$NetBSD: pci.4,v 1.29 2000/04/01 00:32:23 tsarna Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt.  All rights reserved.
@@ -247,6 +247,8 @@ NE2000 and compatible 10/100 Ethernet device
 Sun Neptune 10Gb Ethernet device
 .It Xr nfe 4
 NVIDIA nForce MCP 10/100/1Gb Ethernet device
+.It Xr ngbe 4
+WangXun WX1860 PCI Express 10/100/1Gb Ethernet device
 .It Xr nge 4
 National Semiconductor PCI 10/100/1Gb Ethernet device
 .It Xr oce 4
