--- a/share/man/man4/ngbe.4
+++ b/share/man/man4/ngbe.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: ngbe.4,v 1.1 2023/03/31 08:20:58 kevlo Exp $
+.\" $OpenBSD: ngbe.4,v 1.2 2023/03/31 13:45:13 jmc Exp $
 .\"
 .\" Copyright (c) 2023 Kevin Lo <kevlo@openbsd.org>
 .\"
@@ -18,7 +18,7 @@
 .Dt NGBE 4
 .Os
 .Sh NAME
-.Nm ngbe 
+.Nm ngbe
 .Nd WangXun WX1860 PCI Express 10/100/1Gb Ethernet device
 .Sh SYNOPSIS
 .Cd "ngbe* at pci?"
@@ -57,8 +57,7 @@ Only full-duplex mode is supported at this speed.
 .El
 .Pp
 For more information on configuring this device, see
-.Xr ifconfig 8
-for more details.
+.Xr ifconfig 8 .
 .Sh SEE ALSO
 .Xr arp 4 ,
 .Xr ifmedia 4 ,
