--- a/share/man/man4/igc.4
+++ b/share/man/man4/igc.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: igc.4,v 1.2 2023/03/31 02:20:21 kevlo Exp $
+.\" $OpenBSD: igc.4,v 1.3 2023/03/31 13:48:34 jmc Exp $
 .\"
 .\" Copyright (c) 2021 Patrick Wildt <patrick@blueri.se>
 .\"
@@ -25,7 +25,7 @@
 .Sh DESCRIPTION
 The
 .Nm
-driver supports Intel I225 / I226 series Ethernet devices.
+driver supports Intel I225/I226 series Ethernet devices.
 .Sh SEE ALSO
 .Xr arp 4 ,
 .Xr ifmedia 4 ,
