--- a/lib/libevent/event_base_loop.3
+++ b/lib/libevent/event_base_loop.3
@@ -1,4 +1,4 @@
-.\" $OpenBSD: event_base_loop.3,v 1.3 2023/04/10 13:40:16 schwarze Exp $
+.\" $OpenBSD: event_base_loop.3,v 1.4 2023/04/17 04:46:04 jsg Exp $
 .\" Copyright (c) 2023 Ted Bullock <tbullock@comlore.com>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
@@ -13,7 +13,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: April 10 2023 $
+.Dd $Mdocdate: April 17 2023 $
 .Dt EVENT_BASE_LOOP 3
 .Os
 .Sh NAME
@@ -66,7 +66,7 @@ and not yet registered with an event loop.
 These are registered to a loop using
 .Xr event_add 3
 and are idle, waiting to trigger and be processed by the loop.
-They can be be queried with
+They can be queried with
 .Fn event_pending 3 .
 .It Sy Activated :
 These are triggered events.
