--- a/usr.bin/kdump/kdump.1
+++ b/usr.bin/kdump/kdump.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: kdump.1,v 1.36 2023/04/16 19:42:40 otto Exp $
+.\"	$OpenBSD: kdump.1,v 1.37 2023/04/17 05:43:12 jmc Exp $
 .\"
 .\" Copyright (c) 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -29,7 +29,7 @@
 .\"
 .\"	from: @(#)kdump.1	8.1 (Berkeley) 6/6/93
 .\"
-.Dd $Mdocdate: April 16 2023 $
+.Dd $Mdocdate: April 17 2023 $
 .Dt KDUMP 1
 .Os
 .Sh NAME
@@ -111,7 +111,7 @@ for the meaning of the letters.
 Display
 .Xr utrace 2
 tracepoints having
-.XR utrace 2
+.Xr utrace 2
 label
 .Ar label
 as strings with
@@ -130,7 +130,7 @@ The
 .Fl t
 and
 .Fl u
-options are mutually exclusive,
+options are mutually exclusive;
 the last one specified overrides any previous ones.
 .Sh FILES
 .Bl -tag -width ktrace.out -compact
