--- a/usr.bin/mg/mg.1
+++ b/usr.bin/mg/mg.1
@@ -1,7 +1,7 @@
-.\"	$OpenBSD: mg.1,v 1.128 2023/03/29 07:29:17 op Exp $
+.\"	$OpenBSD: mg.1,v 1.129 2023/04/17 09:49:04 op Exp $
 .\" This file is in the public domain.
 .\"
-.Dd $Mdocdate: March 29 2023 $
+.Dd $Mdocdate: April 17 2023 $
 .Dt MG 1
 .Os
 .Sh NAME
@@ -738,9 +738,9 @@ Assumes tabs are every eight characters.
 Move forward
 .Va n
 lines.
-.\" .It no-tab-mode
-.\" Toggle notab mode.
-.\" In this mode, spaces are inserted rather than tabs.
+.It no-tab-mode
+Toggle notab mode.
+In this mode, spaces are inserted rather than tabs.
 .It not-modified
 Turn off the modified flag in the current buffer.
 .It open-line
