--- a/share/man/man4/dwqe.4
+++ b/share/man/man4/dwqe.4
@@ -1,6 +1,6 @@
-.\"	$OpenBSD: dwqe.4,v 1.1 2023/04/19 00:13:23 dlg Exp $
+.\"	$OpenBSD: dwqe.4,v 1.2 2023/04/19 00:56:10 jsg Exp $
 .\"
-.\" Copyright (c) 2023 David Gwynnes <dlg@openbsd.org>
+.\" Copyright (c) 2023 David Gwynne <dlg@openbsd.org>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
 .\" purpose with or without fee is hereby granted, provided that the above
@@ -15,18 +15,18 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .Dd $Mdocdate: April 19 2023 $
-.Dt DWXE 4
+.Dt DWQE 4
 .Os
 .Sh NAME
 .Nm dwqe
-.Nd Synopsys Designware Ethernet Quality-of-Service Controller
+.Nd Synopsys DesignWare Ethernet Quality-of-Service Controller
 .Sh SYNOPSIS
 .Cd "dwqe* at fdt?"
 .Sh DESCRIPTION
 The
 .Nm
 driver provides support for various Ethernet controllers based on the
-Synopsys Designware Ethernet Quality-of-Service Controller IP.
+Synopsys DesignWare Ethernet Quality-of-Service Controller IP.
 These controllers are found on Rockchip RK3566, RK3568, and RK3588 SoCs.
 .Pp
 The
