--- a/share/man/man4/viogpu.4
+++ b/share/man/man4/viogpu.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: viogpu.4,v 1.1 2023/04/20 19:28:30 jcs Exp $
+.\"     $OpenBSD: viogpu.4,v 1.2 2023/04/20 20:33:55 jmc Exp $
 .\"
 .\" Copyright (c) 2023 joshua stein <jcs@openbsd.org>
 .\"
@@ -31,12 +31,11 @@ driver provides support for the
 GPU interface provided by QEMU and other virtual machines to create a
 .Xr wscons 4
 console.
-.El
 .Sh SEE ALSO
 .Xr intro 4 ,
-.Xr virtio 4
+.Xr virtio 4 ,
 .Xr wscons 4 ,
-.Xr wsdisplay 4 ,
+.Xr wsdisplay 4
 .Sh HISTORY
 The
 .Nm
