--- a/share/man/man4/pci.4
+++ b/share/man/man4/pci.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pci.4,v 1.399 2023/04/23 08:04:59 dlg Exp $
+.\"	$OpenBSD: pci.4,v 1.400 2023/04/24 00:11:08 dlg Exp $
 .\"	$NetBSD: pci.4,v 1.29 2000/04/01 00:32:23 tsarna Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt.  All rights reserved.
@@ -31,7 +31,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: April 23 2023 $
+.Dd $Mdocdate: April 24 2023 $
 .Dt PCI 4
 .Os
 .Sh NAME
@@ -482,6 +482,8 @@ National Semiconductor Geode SC1100 PCI-ISA bridge with GPIO
 .Tn HyperTransport Ns \- Ns Tn PCI bridge
 .It Xr ichiic 4
 Intel ICH SMBus controller
+.It Xr iosf 4
+Intel OnChip System Fabric device
 .It Xr nviic 4
 NVIDIA nForce2/3/4 SMBus controller
 .It Xr ohci 4
