mark up `mode' in -f description

--- a/usr.bin/mg/mg.1
+++ b/usr.bin/mg/mg.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mg.1,v 1.131 2023/04/25 08:37:24 op Exp $
+.\"	$OpenBSD: mg.1,v 1.132 2023/04/25 13:32:20 op Exp $
 .\" This file is in the public domain.
 .\"
 .Dd $Mdocdate: April 25 2023 $
@@ -43,7 +43,9 @@ commands found in the specified
 .Ar file
 and then terminate.
 .It Fl f Ar mode
-Run the mode command for all buffers created from
+Run the
+.Ar mode
+command for all buffers created from
 arguments on the command line, including the
 scratch buffer and all files.
 .It Fl n
