--- a/sbin/ifconfig/ifconfig.8
+++ b/sbin/ifconfig/ifconfig.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ifconfig.8,v 1.393 2023/04/25 05:02:56 asou Exp $
+.\"	$OpenBSD: ifconfig.8,v 1.394 2023/04/26 02:38:08 asou Exp $
 .\"	$NetBSD: ifconfig.8,v 1.11 1996/01/04 21:27:29 pk Exp $
 .\"     $FreeBSD: ifconfig.8,v 1.16 1998/02/01 07:03:29 steve Exp $
 .\"
@@ -31,7 +31,7 @@
 .\"
 .\"     @(#)ifconfig.8	8.4 (Berkeley) 6/1/94
 .\"
-.Dd $Mdocdate: April 25 2023 $
+.Dd $Mdocdate: April 26 2023 $
 .Dt IFCONFIG 8
 .Os
 .Sh NAME
@@ -1830,6 +1830,7 @@ for a complete list of the available protocols.
 .Nm ifconfig
 .Ar tunnel-interface
 .Op Oo Fl Oc Ns Cm keepalive Ar period count
+.Op Oo Fl Oc Ns Cm parent Ar parent-interface
 .Op Cm rxprio Ar prio
 .Op Oo Fl Oc Ns Cm tunnel Ar src_address dest_address
 .Op Cm tunneladdr Ar src_address
@@ -1875,6 +1876,16 @@ is 2 since the round-trip time of keepalive packets needs to be accounted for.
 Disable the
 .Xr gre 4
 keepalive mechanism.
+.It Cm parent Ar parent-interface
+Associate the
+.Xr nvgre 4
+interface with the interface
+.Ar parent-interface .
+.It Cm -parent
+Disassociate from the parent interface.
+This breaks the link between the
+.Xr nvgre 4
+interface and its parent.
 .It Cm rxprio Ar prio
 Configure the source used for the packet priority when decapsulating a packet.
 The value can be a priority number from 0 to 7, or
