Implement -V as an alias to --version. From Martin Cracauer OK kn@

--- a/usr.bin/rsync/rsync.1
+++ b/usr.bin/rsync/rsync.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: rsync.1,v 1.30 2022/08/02 18:09:20 job Exp $
+.\"	$OpenBSD: rsync.1,v 1.31 2023/04/27 16:28:18 claudio Exp $
 .\"
 .\" Copyright (c) 2019 Kristaps Dzonsons <kristaps@bsd.lv>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: August 2 2022 $
+.Dd $Mdocdate: April 27 2023 $
 .Dt OPENRSYNC 1
 .Os
 .Sh NAME
@@ -22,7 +22,7 @@
 .Nd synchronise local and remote files
 .Sh SYNOPSIS
 .Nm openrsync
-.Op Fl aDglnoprtvx
+.Op Fl aDglnoprtVvx
 .Op Fl e Ar program
 .Op Fl -address Ns = Ns Ar sourceaddr
 .Op Fl -compare-dest Ns = Ns Ar directory
@@ -39,7 +39,6 @@
 .Op Fl -port Ns = Ns Ar service
 .Op Fl -rsync-path Ns = Ns Ar program
 .Op Fl -timeout Ns = Ns Ar seconds
-.Op Fl -version
 .Ar source ...
 .Ar directory
 .Sh DESCRIPTION
@@ -220,7 +219,7 @@ Do not cross filesystem boundaries.
 If this option is repeated, all mount point directories from the copy are
 omitted.
 Otherwise, it includes an empty directory at each mount point it encounters.
-.It Fl -version
+.It Fl V , -version
 Print version and exit.
 .El
 .Pp
